--- a/index.htm
+++ b/index.htm
@@ -159,7 +159,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 	<div class="container clr page-header-inner">
 
 		
-			<h1 class="page-header-title clr" itemprop="headline">Recent Posts</h1>
+			<h1 class="page-header-title clr" itemprop="headline">Swiftplay Blog</h1>
 
 			
 		
