--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 	<script type="application/ld+json" class="yoast-schema-graph">{"@context":"https://schema.org","@graph":[{"@type":"CollectionPage","@id":"https://swiftplay.pro/","url":"https://swiftplay.pro/","name":"Swiftplay","isPartOf":{"@id":"https://swiftplay.pro/#website"},"breadcrumb":{"@id":"https://swiftplay.pro/#breadcrumb"},"inLanguage":"en-US"},{"@type":"BreadcrumbList","@id":"https://swiftplay.pro/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]},{"@type":"WebSite","@id":"https://swiftplay.pro/#website","url":"https://swiftplay.pro/","name":"Swiftplay","description":"","potentialAction":[{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://swiftplay.pro/?s={search_term_string}"},"query-input":{"@type":"PropertyValueSpecification","valueRequired":true,"valueName":"search_term_string"}}],"inLanguage":"en-US"}]}</script>
 	<!-- / Yoast SEO plugin. -->
 
-
+<meta name="google-adsense-account" content="ca-pub-6667576142209988">
 <style id='wp-img-auto-sizes-contain-inline-css'>
 img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 /*# sourceURL=wp-img-auto-sizes-contain-inline-css */
